--- a/MetroInfo/Base.lproj/Main.storyboard
+++ b/MetroInfo/Base.lproj/Main.storyboard
@@ -37,52 +37,50 @@
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="vXZ-lx-hvc" customClass="MetroListViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS" customClass="MetroListView">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" id="lzf-ZA-aVe">
-                                <rect key="frame" x="0.0" y="65" width="320" height="376"/>
+                            <view contentMode="scaleToFill" id="5om-TX-LXP">
+                                <rect key="frame" x="0.0" y="373" width="320" height="195"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" id="5om-TX-LXP" customClass="MetroListView">
-                                <rect key="frame" x="0.0" y="440" width="320" height="128"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="59" sectionHeaderHeight="22" sectionFooterHeight="22" id="xlG-R7-Y5p" customClass="MetroListTableView">
+                                <rect key="frame" x="0.0" y="373" width="320" height="334"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="xlG-R7-Y5p" customClass="MetroListTableView">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="273"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="请输入站点名" id="uER-tZ-M5W">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                            <textInputTraits key="textInputTraits"/>
-                                            <connections>
-                                                <outlet property="delegate" destination="vXZ-lx-hvc" id="Osi-yB-PN0"/>
-                                            </connections>
-                                        </searchBar>
-                                        <prototypes>
-                                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="metroLineTableCell" textLabel="K4H-uz-ZI5" style="IBUITableViewCellStyleDefault" id="iAf-VT-uqU">
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iAf-VT-uqU" id="Qi7-LF-Yy6">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="请输入站点名" id="uER-tZ-M5W">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="vXZ-lx-hvc" id="Osi-yB-PN0"/>
+                                    </connections>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="metroLineTableCell" textLabel="K4H-uz-ZI5" rowHeight="59" style="IBUITableViewCellStyleDefault" id="iAf-VT-uqU">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iAf-VT-uqU" id="Qi7-LF-Yy6">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="K4H-uz-ZI5">
                                                     <autoresizingMask key="autoresizingMask"/>
-                                                    <subviews>
-                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="K4H-uz-ZI5">
-                                                            <autoresizingMask key="autoresizingMask"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                </tableViewCellContentView>
-                                                <connections>
-                                                    <segue destination="bIa-O7-2cL" kind="modal" identifier="sequeStation" trigger="accessoryAction" modalPresentationStyle="pageSheet" modalTransitionStyle="coverVertical" id="1DJ-21-Vzs"/>
-                                                </connections>
-                                            </tableViewCell>
-                                        </prototypes>
-                                    </tableView>
-                                </subviews>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="bIa-O7-2cL" kind="modal" identifier="sequeStation" trigger="accessoryAction" modalPresentationStyle="pageSheet" modalTransitionStyle="coverVertical" id="1DJ-21-Vzs"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <view contentMode="scaleToFill" id="lzf-ZA-aVe">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="376"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -91,11 +89,13 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="Dgt-zc-FYp">
                         <barButtonItem key="leftBarButtonItem" title="城市" id="1bC-Sx-M62">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="didSelectCityBackBtn:" destination="vXZ-lx-hvc" id="hbN-TW-4f3"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="附近" id="xTO-X2-WqK">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="btnSearchNearby:" destination="vXZ-lx-hvc" id="itL-fg-RdW"/>
                             </connections>
@@ -105,7 +105,7 @@
                     <connections>
                         <outlet property="cityButton" destination="1bC-Sx-M62" id="jaY-2W-lpV"/>
                         <outlet property="mapView" destination="lzf-ZA-aVe" id="rVP-zg-Ree"/>
-                        <outlet property="metroListView" destination="5om-TX-LXP" id="Hh0-JC-pWr"/>
+                        <outlet property="metroListView" destination="kh9-bI-dsS" id="eQS-74-Cbv"/>
                         <outlet property="metroSearchBar" destination="uER-tZ-M5W" id="FKe-uG-ClA"/>
                         <outlet property="metroSearchController" destination="eYf-ex-vks" id="RtQ-ZC-WnQ"/>
                         <outlet property="nearbyButton" destination="xTO-X2-WqK" id="gdB-F8-sBG"/>
@@ -135,7 +135,7 @@
             <objects>
                 <viewController id="b29-Yr-iHO" customClass="MetroInfoViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Lcg-0r-nel">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="线路" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4dd-t0-7UT">
@@ -227,6 +227,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="站点信息" id="7iO-Ft-JTV">
                         <barButtonItem key="leftBarButtonItem" title="后退" id="ENM-Td-1SH">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <segue destination="RlA-U4-N0q" kind="unwind" unwindAction="unwindSegueFromMetroInfo:" id="COe-g9-9SI"/>
                             </connections>
@@ -251,9 +252,10 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bIa-O7-2cL" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="uhC-Nb-iCd"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="utZ-QL-nl7">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="utZ-QL-nl7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -270,9 +272,10 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wSE-W5-8oY" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="1mu-Wh-VNx"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fQH-B5-4BP">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="fQH-B5-4BP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -288,9 +291,10 @@
             <objects>
                 <navigationController storyboardIdentifier="cityNavigator" title="cityNavigator" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="MBS-45-nan" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sAz-N7-56L">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="sAz-N7-56L">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="0.40000000596046448" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
